--- a/.github/workflows/draft_nightly.yml
+++ b/.github/workflows/draft_nightly.yml
@@ -27,7 +27,7 @@ jobs:
       # Extract branch info
       - name: Set info
         run: |
-          echo "BRANCH_NAME=c2ncl" >> $GITHUB_ENV
+          echo "BINARY_NAME=c2ncl" >> $GITHUB_ENV
           echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
           echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
       # Fix git permission
@@ -37,7 +37,6 @@ jobs:
       # Print info for debug
       - name: Print Info
         run: |
-          echo $BRANCH_NAME
           echo $BINARY_NAME
           echo $CHANNEL
           echo $VERSION
