--- a/.github/workflows/draft_nightly.yml
+++ b/.github/workflows/draft_nightly.yml
@@ -27,7 +27,7 @@ jobs:
       # Extract branch info
       - name: Set info
         run: |
-          echo "BRANCH_NAME=c2ncl" >> $GITHUB_ENV
+          echo "BINARY_NAME=c2ncl" >> $GITHUB_ENV
           echo "CHANNEL=$(echo ${GITHUB_REF##*/} | awk -F- '{print $2}')" >> $GITHUB_ENV
           echo "VERSION=$(echo ${GITHUB_REF##*/} | awk -F- '{print $3}')" >> $GITHUB_ENV
       # Fix git permission
@@ -37,28 +37,27 @@ jobs:
       # Print info for debug
       - name: Print Info
         run: |
-          echo $BRANCH_NAME
           echo $BINARY_NAME
           echo $CHANNEL
           echo $VERSION
       # Package c2ncl into a .deb
       - name: Package
-        run: ./scripts/release_c2ncl.sh
+        run: ./scripts/release.sh
       - name: Test if release already exists
         id: release-exists
         continue-on-error: true
         run: gh release view $BINARY_NAME-$VERSION-$CHANNEL
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GH_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Create new draft release
         if: steps.release-exists.outcome == 'failure' && steps.release-exists.conclusion == 'success'
-        run: gh release create -d $BINARY_NAME-$VERSION-$CHANNEL -t $BINARY_NAME-$VERSION-$CHANNEL -F changelog.md target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#c2ncl_amd64.deb
+        run: gh release create -R nxthat/c2ncl -d $BINARY_NAME-$VERSION-$CHANNEL -t $BINARY_NAME-$VERSION-$CHANNEL -F changelog.md target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#c2ncl_amd64.deb
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GH_TOKEN: ${{ secrets.BOT_TOKEN }}
       - name: Update draft release
         if: steps.release-exists.outcome == 'success' && steps.release-exists.conclusion == 'success'
         run: |
-          gh release delete-asset -y $BINARY_NAME-$VERSION-$CHANNEL ${BINARY_NAME}_${VERSION}_amd64.deb || true
-          gh release upload $BINARY_NAME-$VERSION-$CHANNEL target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#c2ncl_amd64.deb
+          gh release delete-asset -R nxthat/c2ncl -y $BINARY_NAME-$VERSION-$CHANNEL ${BINARY_NAME}_${VERSION}_amd64.deb || true
+          gh release upload -R nxthat/c2ncl $BINARY_NAME-$VERSION-$CHANNEL target/debian/${BINARY_NAME}_${VERSION}_amd64.deb#c2ncl_amd64.deb
         env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
+          GH_TOKEN: ${{ secrets.BOT_TOKEN }}
