--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,12 +15,15 @@ codegen-units = 1
 
 [dependencies]
 anyhow = "1.0.71"
-bollard-next = "0.14.7"
+bollard-next = "0.15.0"
 clap = { version = "4.2.2", features = ["derive"] }
 derive_builder = "0.12.0"
-docker-compose-types = "0.4.1"
-nanocl_stubs = { version = "0.6.0", features = ["serde"] }
+docker-compose-types = "0.5.0"
+nanocl_stubs = { version = "0.7.0", features = ["serde"] }
 regex = "1.7.3"
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
+
+[patch.crates-io]
+nanocl_stubs = { path = "../nanocl/crates/nanocl_stubs" }
