--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,5 +25,5 @@ serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 serde_yaml = "0.9.21"
 
-[patch.crates-io]
-nanocl_stubs = { path = "../nanocl/crates/nanocl_stubs" }
+# [patch.crates-io]
+# nanocl_stubs = { path = "../nanocl/crates/nanocl_stubs" }
