--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ name = "c2ncl"
 version = "0.0.1"
 edition = "2021"
 authors = ["Next Hat Contributors <team@next-hat.com>"]
-description = "Converts docker-compose.yml to nanocl StateFile.yml"
+description = "Converts docker-compose.yml v2+ to nanocl StateFile.yml"
 readme = "README.md"
 
 # Profile optimised for binary size
