--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ anyhow = "1.0.71"
 bollard-next = "0.15.0"
 clap = { version = "4.2.2", features = ["derive"] }
 derive_builder = "0.12.0"
+dialoguer = "0.11.0"
 docker-compose-types = "0.5.0"
 nanocl_stubs = { version = "0.10.0", features = ["serde"] }
 regex = "1.7.3"
